[gd_scene load_steps=3 format=3 uid="uid://idosu0ea81b0"]

[ext_resource type="Script" uid="uid://dddnngwbr77q3" path="res://scripts/dialogue_box.gd" id="1_6iboe"]
[ext_resource type="Texture2D" uid="uid://uhcv2omo5cg6" path="res://dialogue.png" id="2_4mjmi"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 448.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 64.0
script = ExtResource("1_6iboe")
confirm_delay = 0.2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 124.0
offset_bottom = 61.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_4mjmi")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/NinePatchRect"]
layout_mode = 1
offset_right = 17.0
offset_bottom = 16.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 8

[node name="DialogueLabel" type="RichTextLabel" parent="VBoxContainer/NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.05882353, 0.09019608, 0.20784314, 1)
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "-D"

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Confirmar Pedido"
